update sum stats tables

--- a/Output/All Data EDA/Tabular EDA/Financial_Summary_Statistics.tex
+++ b/Output/All Data EDA/Tabular EDA/Financial_Summary_Statistics.tex
@@ -33,6 +33,14 @@ Quick Ratio & 1.36 & 0.00 & 1.15 & 6.12 & 0.98 & Additional Ratios \\
 Return on Assets & 0.01 & -0.03 & 0.01 & 0.06 & 0.02 & Additional Ratios \\
 Return on Capital Employed & 0.03 & -0.03 & 0.02 & 0.11 & 0.03 & Additional Ratios \\
 Return on Equity & 0.01 & -1.32 & 0.03 & 0.78 & 0.25 & Additional Ratios \\
+Common Plus Preferred Stock & 338,752,830.58 & -74,100.00 & 6,000,000.00 & 9,817,134,000.00 & 926,606,262.05 & Constructed for Altman's Z \\
+EBIT & 304,424,183.99 & -1,364,004,000.00 & 122,944,000.00 & 4,334,000,000.00 & 556,409,802.60 & Constructed for Altman's Z \\
+Ratio A & 0.02 & -0.02 & 0.02 & 0.08 & 0.02 & Constructed for Altman's Z \\
+Ratio B & 0.21 & 0.04 & 0.18 & 0.70 & 0.15 & Constructed for Altman's Z \\
+Ratio C & 1.87 & 0.29 & 1.42 & 8.06 & 1.55 & Constructed for Altman's Z \\
+Ratio D & 0.13 & -0.13 & 0.10 & 0.57 & 0.15 & Constructed for Altman's Z \\
+Ratio E & 0.23 & -0.74 & 0.21 & 1.01 & 0.32 & Constructed for Altman's Z \\
+Working Capital & 1,125,108,587.77 & -28,931,855,000.00 & 543,614,000.00 & 39,464,552,600.00 & 3,845,915,891.90 & Constructed for Altman's Z \\
 Accounts Payable (Balance Sheet) & 957,290,323.93 & -237,651,171.00 & 356,700,000.00 & 11,433,000,000.00 & 1,551,108,353.02 & Financial Statements \\
 Accounts Payable (Cash Flow Statement) & 5,154,565.15 & -321,769,000.00 & 0.00 & 1,789,652,000.00 & 82,110,968.91 & Financial Statements \\
 Accounts Receivables & -11,478,236.25 & -544,000,000.00 & 0.00 & 325,000,000.00 & 91,535,961.30 & Financial Statements \\
