--- a/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
+++ b/Output/All Data EDA/Tabular EDA/Numeric_Summary_Statistics.tex
@@ -62,6 +62,26 @@ Difference in Ratio B from prior fixed quarter & -0.00 & -0.56 & 0.00 & 0.57 & 0
 Difference in Ratio C from prior fixed quarter & -0.01 & -7.77 & 0.01 & 7.15 & 0.57 & Change Ratios \\
 Difference in Ratio D from prior fixed quarter & -0.00 & -0.57 & 0.00 & 0.60 & 0.05 & Change Ratios \\
 Difference in Ratio E from prior fixed quarter & 0.00 & -0.80 & 0.00 & 0.98 & 0.07 & Change Ratios \\
+Common Plus Preferred Stock & 338,752,830.58 & -74,100.00 & 6,000,000.00 & 9,817,134,000.00 & 926,606,262.05 & Constructed for Altman's Z \\
+EBIT & 304,424,183.99 & -1,364,004,000.00 & 122,944,000.00 & 4,334,000,000.00 & 556,409,802.60 & Constructed for Altman's Z \\
+Ratio A & 0.02 & -0.02 & 0.02 & 0.08 & 0.02 & Constructed for Altman's Z \\
+Ratio B & 0.21 & 0.04 & 0.18 & 0.70 & 0.15 & Constructed for Altman's Z \\
+Ratio C & 1.87 & 0.29 & 1.42 & 8.06 & 1.55 & Constructed for Altman's Z \\
+Ratio D & 0.13 & -0.13 & 0.10 & 0.57 & 0.15 & Constructed for Altman's Z \\
+Ratio E & 0.23 & -0.74 & 0.21 & 1.01 & 0.32 & Constructed for Altman's Z \\
+Working Capital & 1,125,108,587.77 & -28,931,855,000.00 & 543,614,000.00 & 39,464,552,600.00 & 3,845,915,891.90 & Constructed for Altman's Z \\
+Active Tone & 614.44 & 29.00 & 623.00 & 1,584.00 & 180.48 & Constructed for Tone \\
+Active-Passive Tone Score & 2.98 & 1.59 & 2.92 & 5.98 & 0.55 & Constructed for Tone \\
+Negative Tone & 106.28 & 7.00 & 103.00 & 286.00 & 41.53 & Constructed for Tone \\
+Overstated Tone & 380.02 & 27.00 & 382.00 & 932.00 & 116.00 & Constructed for Tone \\
+Overstated-Understated Tone Score & 1.97 & 0.82 & 1.91 & 5.93 & 0.47 & Constructed for Tone \\
+Passive Tone & 212.87 & 8.00 & 213.00 & 578.00 & 72.05 & Constructed for Tone \\
+Positive Tone & 333.11 & 21.00 & 335.00 & 994.00 & 104.97 & Constructed for Tone \\
+Postivity-Negativity Tone Score & 3.43 & 1.10 & 3.19 & 11.53 & 1.27 & Constructed for Tone \\
+Strong Tone & 715.24 & 40.00 & 708.00 & 2,014.00 & 227.56 & Constructed for Tone \\
+Strong-Weak Tone Score & 8.00 & 2.49 & 7.43 & 35.09 & 2.93 & Constructed for Tone \\
+Understated Tone & 202.91 & 17.00 & 203.00 & 565.00 & 73.83 & Constructed for Tone \\
+Weak Tone & 97.35 & 6.00 & 96.00 & 269.00 & 37.24 & Constructed for Tone \\
 Accounts Payable (Balance Sheet) & 957,290,323.93 & -237,651,171.00 & 356,700,000.00 & 11,433,000,000.00 & 1,551,108,353.02 & Financial Statements \\
 Accounts Payable (Cash Flow Statement) & 5,154,565.15 & -321,769,000.00 & 0.00 & 1,789,652,000.00 & 82,110,968.91 & Financial Statements \\
 Accounts Receivables & -11,478,236.25 & -544,000,000.00 & 0.00 & 325,000,000.00 & 91,535,961.30 & Financial Statements \\
