--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -763,15 +763,31 @@
      "text": [
       "{'booster': 'gbtree', 'gamma': 0.1, 'learning_rate': 0.1, 'max_depth': 20, 'min_child_weight': 5, 'n_estimators': 1000, 'objective': 'multi:softprob'}\n",
       "XGBoost\n",
-      "{'booster': 'gbtree', 'learning_rate': 0.01, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 100, 'objective': 'multi:softprob'}\n",
-      "XGBoost\n",
       "   Previous Ratings booster  gamma  learning_rate  max_depth  \\\n",
-      "0  Exclude Previous  gbtree    0.1           0.10         20   \n",
-      "0  Include Previous  gbtree    NaN           0.01          3   \n",
+      "0  Exclude Previous  gbtree    0.1            0.1         20   \n",
       "\n",
       "   min_child_weight  n_estimators       objective  \n",
       "0                 5          1000  multi:softprob  \n",
-      "0                 3           100  multi:softprob  \n"
+      "Index(['Previous Ratings', 'booster', 'gamma', 'learning_rate', 'max_depth',\n",
+      "       'min_child_weight', 'n_estimators', 'objective'],\n",
+      "      dtype='object')\n",
+      "{'booster': 'gbtree', 'learning_rate': 0.01, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 100, 'objective': 'multi:softprob'}\n",
+      "XGBoost\n",
+      "   Previous Ratings booster  learning_rate  max_depth  min_child_weight  \\\n",
+      "0  Include Previous  gbtree           0.01          3                 3   \n",
+      "\n",
+      "   n_estimators       objective  \n",
+      "0           100  multi:softprob  \n",
+      "Index(['Previous Ratings', 'booster', 'learning_rate', 'max_depth',\n",
+      "       'min_child_weight', 'n_estimators', 'objective'],\n",
+      "      dtype='object')\n",
+      "   Previous Ratings Booster  Gamma  Learning Rate  Max Depth  \\\n",
+      "0  Exclude Previous  gbtree    0.1           0.10         20   \n",
+      "0  Include Previous  gbtree    NaN           0.01          3   \n",
+      "\n",
+      "   Min Child Weight  Number of Estimators       Objective  \n",
+      "0                 5                  1000  multi:softprob  \n",
+      "0                 3                   100  multi:softprob  \n"
      ]
     }
    ],
@@ -807,6 +823,28 @@
     "    # Column at the front for whether previous ratings are included or excluded\n",
     "    best_params.insert(0, 'Previous Ratings', include_exclude_previous[:-1].replace('_', ' ').title())\n",
     "\n",
+    "    print(best_params)\n",
+    "\n",
+    "    #best_params = best_params.reset_index(drop=True)\n",
+    "\n",
+    "    # Rename booster to Booster, gamma to Gamma, learning_rate to Learning Rate, max_depth to Max Depth, min_child_weight to Min Child Weight, n_estimators to Number of Estimators, objective to Objective\n",
+    "    print(best_params.columns)\n",
+    "    best_params.rename(columns={'booster': 'Booster', 'gamma': 'Gamma', 'learning_rate': 'Learning Rate', 'max_depth': 'Max Depth', 'min_child_weight': 'Min Child Weight', 'n_estimators': 'Number of Estimators', 'objective': 'Objective'}, inplace=True)\n",
+    "\n",
+    "    # Export smaller version to Excel\n",
+    "    # drop first col, Booster, Objective\n",
+    "    bp_small = best_params.drop(columns=['Booster', 'Objective', 'Previous Ratings'])\n",
+    "    bp_small.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Best_Params.xlsx', index=False)\n",
+    "\n",
+    "    # Export to LaTeX\n",
+    "    for col in ['Learning Rate', 'Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
+    "        bp_small[col] = bp_small[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "    # Center all columns\n",
+    "    lt_string = bp_small.to_latex(index=False, column_format='c' * len(bp_small.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Models_Best_Params.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size) \n",
+    "\n",
     "    # Append to best_params_dfs\n",
     "    best_params_dfs.append(best_params)\n",
     "\n",
@@ -821,7 +859,7 @@
     "#best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
-    "for col in ['learning_rate', 'max_depth', 'min_child_weight', 'n_estimators']:\n",
+    "for col in ['Learning Rate', 'Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
     "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
@@ -839,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
