--- a/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
+++ b/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
@@ -1,7 +1,7 @@
 \footnotesize
 \begin{tabular}{cccccccc}
 \toprule
-Previous Ratings & booster & gamma & learning_rate & max_depth & min_child_weight & n_estimators & objective \\
+Previous Ratings & Booster & Gamma & Learning Rate & Max Depth & Min Child Weight & Number of Estimators & Objective \\
 \midrule
 Exclude Previous & gbtree & 0.100000 & 0.10 & 20.00 & 5.00 & 1,000.00 & multi:softprob \\
 Include Previous & gbtree & NaN & 0.01 & 3.00 & 3.00 & 100.00 & multi:softprob \\
