--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -808,6 +808,20 @@
     "    # Column at the front for whether previous ratings are included or excluded\n",
     "    best_params.insert(0, 'Previous Ratings', include_exclude_previous[:-1].replace('_', ' ').title())\n",
     "\n",
+    "    # Export smaller version to Excel\n",
+    "    # drop first col\n",
+    "    bp_small = best_params.drop(columns='Previous Ratings')\n",
+    "    bp_small.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Best_Params.xlsx', index=False)\n",
+    "\n",
+    "    # Export to LaTeX\n",
+    "    for col in ['C', 'L1 Ratio']:\n",
+    "        bp_small[col] = bp_small[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "    # Center all columns\n",
+    "    lt_string = bp_small.to_latex(index=False, column_format='c' * len(bp_small.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Models_Best_Params.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size) \n",
+    "\n",
     "    # Append to best_params_dfs\n",
     "    best_params_dfs.append(best_params)\n",
     "\n",
@@ -823,7 +837,7 @@
     "\n",
     "# Export to LaTeX\n",
     "for col in ['C', 'L1 Ratio']:\n",
-    "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "   best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -840,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
