update xgboost hyperparameter tables

--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -771,6 +771,9 @@
       "Index(['Previous Ratings', 'booster', 'gamma', 'learning_rate', 'max_depth',\n",
       "       'min_child_weight', 'n_estimators', 'objective'],\n",
       "      dtype='object')\n",
+      "Index(['Gamma', 'Learning Rate', 'Max Depth', 'Min Child Weight',\n",
+      "       'Number of Estimators'],\n",
+      "      dtype='object')\n",
       "{'booster': 'gbtree', 'learning_rate': 0.01, 'max_depth': 3, 'min_child_weight': 3, 'n_estimators': 100, 'objective': 'multi:softprob'}\n",
       "XGBoost\n",
       "   Previous Ratings booster  learning_rate  max_depth  min_child_weight  \\\n",
@@ -780,6 +783,9 @@
       "0           100  multi:softprob  \n",
       "Index(['Previous Ratings', 'booster', 'learning_rate', 'max_depth',\n",
       "       'min_child_weight', 'n_estimators', 'objective'],\n",
+      "      dtype='object')\n",
+      "Index(['Learning Rate', 'Max Depth', 'Min Child Weight',\n",
+      "       'Number of Estimators'],\n",
       "      dtype='object')\n",
       "   Previous Ratings Booster  Gamma  Learning Rate  Max Depth  \\\n",
       "0  Exclude Previous  gbtree    0.1           0.10         20   \n",
@@ -837,8 +843,13 @@
     "    bp_small.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/' + include_exclude_previous + 'Most_Complex_Model_Best_Params.xlsx', index=False)\n",
     "\n",
     "    # Export to LaTeX\n",
-    "    for col in ['Learning Rate', 'Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
+    "    print(bp_small.columns)\n",
+    "    for col in ['Learning Rate']:\n",
     "        bp_small[col] = bp_small[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "    if 'Gamma' in bp_small.columns:\n",
+    "        bp_small['Gamma'] = bp_small['Gamma'].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "    for col in ['Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
+    "        bp_small[col] = bp_small[col].apply(lambda x: '{:,.0f}'.format(x))\n",
     "    # Center all columns\n",
     "    lt_string = bp_small.to_latex(index=False, column_format='c' * len(bp_small.columns), escape=False)\n",
     "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -859,8 +870,10 @@
     "#best_params.to_latex('../../../../Output/Modelling/Logistic Regression/Tables/Most_Complex_Model_Best_Params.tex', index=False)\n",
     "\n",
     "# Export to LaTeX\n",
-    "for col in ['Learning Rate', 'Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
+    "for col in ['Gamma', 'Learning Rate']:\n",
     "    best_params[col] = best_params[col].apply(lambda x: '{:,.2f}'.format(x))\n",
+    "for col in ['Max Depth', 'Min Child Weight', 'Number of Estimators']:\n",
+    "    best_params[col] = best_params[col].apply(lambda x: '{:,.0f}'.format(x))\n",
     "# Center all columns\n",
     "lt_string = best_params.to_latex(index=False, column_format='c' * len(best_params.columns), escape=False)\n",
     "latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
@@ -877,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
