--- a/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
+++ b/Output/Modelling/XGBoost/Tables/Most_Complex_Models_Best_Params.tex
@@ -3,8 +3,8 @@
 \toprule
 Previous Ratings & Booster & Gamma & Learning Rate & Max Depth & Min Child Weight & Number of Estimators & Objective \\
 \midrule
-Exclude Previous & gbtree & 0.100000 & 0.10 & 20.00 & 5.00 & 1,000.00 & multi:softprob \\
-Include Previous & gbtree & NaN & 0.01 & 3.00 & 3.00 & 100.00 & multi:softprob \\
+Exclude Previous & gbtree & 0.10 & 0.10 & 20 & 5 & 1,000 & multi:softprob \\
+Include Previous & gbtree & nan & 0.01 & 3 & 3 & 100 & multi:softprob \\
 \bottomrule
 \end{tabular}
 
