fix classification report sort order

--- a/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/XGBoost/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -667,15 +667,15 @@
       "weighted avg     0.9040    0.9034    0.9017      1118\n",
       "\n",
       "  Rating Precision  Recall F1-Score Support\n",
-      "0      A    0.8447  0.8894   0.8665     208\n",
-      "1     AA    0.8824  0.5769   0.6977      52\n",
       "2    AAA    0.9048  0.7917   0.8444      24\n",
-      "3      B    0.9272  0.9091   0.9180     154\n",
-      "4     BB    0.9357  0.9225   0.9291     284\n",
+      "1     AA    0.8824  0.5769   0.6977      52\n",
+      "0      A    0.8447  0.8894   0.8665     208\n",
       "5    BBB    0.9129  0.9532   0.9326     363\n",
-      "6      C    1.0000  1.0000   1.0000       4\n",
-      "7     CC    1.0000  0.5000   0.6667       2\n",
+      "4     BB    0.9357  0.9225   0.9291     284\n",
+      "3      B    0.9272  0.9091   0.9180     154\n",
       "8    CCC    0.7857  0.8462   0.8148      26\n",
+      "7     CC    1.0000  0.5000   0.6667       2\n",
+      "6      C    1.0000  1.0000   1.0000       4\n",
       "9      D    1.0000  1.0000   1.0000       1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -695,15 +695,15 @@
       "weighted avg     0.9539    0.9535    0.9536      1118\n",
       "\n",
       "  Rating Precision  Recall F1-Score Support\n",
-      "0      A    0.9604  0.9327   0.9463     208\n",
-      "1     AA    0.9423  0.9423   0.9423      52\n",
       "2    AAA    0.8846  0.9583   0.9200      24\n",
-      "3      B    0.9359  0.9481   0.9419     154\n",
-      "4     BB    0.9576  0.9542   0.9559     284\n",
+      "1     AA    0.9423  0.9423   0.9423      52\n",
+      "0      A    0.9604  0.9327   0.9463     208\n",
       "5    BBB    0.9669  0.9669   0.9669     363\n",
-      "6      C    1.0000  1.0000   1.0000       4\n",
-      "7     CC    1.0000  1.0000   1.0000       2\n",
+      "4     BB    0.9576  0.9542   0.9559     284\n",
+      "3      B    0.9359  0.9481   0.9419     154\n",
       "8    CCC    0.8621  0.9615   0.9091      26\n",
+      "7     CC    1.0000  1.0000   1.0000       2\n",
+      "6      C    1.0000  1.0000   1.0000       4\n",
       "9      D    1.0000  1.0000   1.0000       1\n"
      ]
     }
@@ -726,6 +726,10 @@
     "    classification_report_data = pd.DataFrame(classification_report_data)\n",
     "    # Set columns to \"Rating\", \"Precision\", \"Recall\", \"F1-Score\", \"Support\"\n",
     "    classification_report_data.columns = ['Rating', 'Precision', 'Recall', 'F1-Score', 'Support']\n",
+    "    # Sort by Rating in correct order: AAA, AA, A, BBB, BB, B, CCC, CC, C, D\n",
+    "    rating_map = {'AAA': 0, 'AA': 1, 'A': 2, 'BBB': 3, 'BB': 4, 'B': 5, 'CCC': 6, 'CC': 7, 'C': 8, 'D': 9}\n",
+    "    classification_report_data['Rating Num'] = classification_report_data['Rating'].map(rating_map)\n",
+    "    classification_report_data = classification_report_data.sort_values(by='Rating Num').drop(columns='Rating Num')\n",
     "    print(classification_report_data)\n",
     "\n",
     "    # Export to Excel\n",
@@ -754,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
