--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -675,15 +675,15 @@
       "weighted avg     0.6389    0.6333    0.6329      1118\n",
       "\n",
       "  Rating Precision  Recall F1-Score Support\n",
-      "0      A    0.5874  0.6298   0.6079     208\n",
-      "1     AA    0.6316  0.6923   0.6606      52\n",
       "2    AAA    0.8261  0.7917   0.8085      24\n",
-      "3      B    0.5864  0.7273   0.6493     154\n",
-      "4     BB    0.6275  0.5458   0.5838     284\n",
+      "1     AA    0.6316  0.6923   0.6606      52\n",
+      "0      A    0.5874  0.6298   0.6079     208\n",
       "5    BBB    0.6909  0.6281   0.6580     363\n",
-      "6      C    1.0000  1.0000   1.0000       4\n",
-      "7     CC    0.3333  1.0000   0.5000       2\n",
+      "4     BB    0.6275  0.5458   0.5838     284\n",
+      "3      B    0.5864  0.7273   0.6493     154\n",
       "8    CCC    0.5556  0.7692   0.6452      26\n",
+      "7     CC    0.3333  1.0000   0.5000       2\n",
+      "6      C    1.0000  1.0000   1.0000       4\n",
       "9      D    1.0000  1.0000   1.0000       1\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -703,15 +703,15 @@
       "weighted avg     0.9518    0.9508    0.9510      1118\n",
       "\n",
       "  Rating Precision  Recall F1-Score Support\n",
-      "0      A    0.9604  0.9327   0.9463     208\n",
-      "1     AA    0.9412  0.9231   0.9320      52\n",
       "2    AAA    0.8519  0.9583   0.9020      24\n",
-      "3      B    0.9359  0.9481   0.9419     154\n",
-      "4     BB    0.9573  0.9472   0.9522     284\n",
+      "1     AA    0.9412  0.9231   0.9320      52\n",
+      "0      A    0.9604  0.9327   0.9463     208\n",
       "5    BBB    0.9669  0.9669   0.9669     363\n",
-      "6      C    1.0000  1.0000   1.0000       4\n",
-      "7     CC    1.0000  1.0000   1.0000       2\n",
+      "4     BB    0.9573  0.9472   0.9522     284\n",
+      "3      B    0.9359  0.9481   0.9419     154\n",
       "8    CCC    0.8065  0.9615   0.8772      26\n",
+      "7     CC    1.0000  1.0000   1.0000       2\n",
+      "6      C    1.0000  1.0000   1.0000       4\n",
       "9      D    1.0000  1.0000   1.0000       1\n"
      ]
     }
@@ -734,6 +734,10 @@
     "    classification_report_data = pd.DataFrame(classification_report_data)\n",
     "    # Set columns to \"Rating\", \"Precision\", \"Recall\", \"F1-Score\", \"Support\"\n",
     "    classification_report_data.columns = ['Rating', 'Precision', 'Recall', 'F1-Score', 'Support']\n",
+    "    # Sort by Rating in correct order: AAA, AA, A, BBB, BB, B, CCC, CC, C, D\n",
+    "    rating_map = {'AAA': 0, 'AA': 1, 'A': 2, 'BBB': 3, 'BB': 4, 'B': 5, 'CCC': 6, 'CC': 7, 'C': 8, 'D': 9}\n",
+    "    classification_report_data['Rating Num'] = classification_report_data['Rating'].map(rating_map)\n",
+    "    classification_report_data = classification_report_data.sort_values(by='Rating Num').drop(columns='Rating Num')\n",
     "    print(classification_report_data)\n",
     "\n",
     "    # Export to Excel\n",
@@ -762,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
