--- a/Code/Modelling/Graph Neural Network/Create Learnable Network for Rating Prediction.ipynb
+++ b/Code/Modelling/Graph Neural Network/Create Learnable Network for Rating Prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[5509 rows x 205 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "[2750 rows x 3 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[1807 rows x 2 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -779,13 +779,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1460\\581827998.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_6980\\581827998.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  feature_and_class_df['train_indicator'] = feature_and_class_df['train_test_80_20'].apply(lambda x: 1 if x == 'train' else 0)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_1460\\581827998.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_6980\\581827998.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,15 +873,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature and class df\n",
-    "feature_and_class_df.to_excel('../../../Data/Learnable Network/feature_and_class_df.xlsx')\n",
+    "feature_and_class_df.to_excel('../../../Data/Learnable Network/feature_and_class_df.xlsx', index=False)\n",
     "\n",
     "# src_dst_df\n",
-    "src_dst_df.to_excel('../../../Data/Learnable Network/src_dst_df.xlsx')"
+    "src_dst_df.to_excel('../../../Data/Learnable Network/src_dst_df.xlsx', index=False)"
    ]
   }
  ],
