fill out scripts

--- a/Code/Modelling/Graph Neural Network/Graph_NN_on_Call_Mentions_Exclude_Previous_Rating_Model_3_Transductive.ipynb
+++ b/Code/Modelling/Graph Neural Network/Graph_NN_on_Call_Mentions_Exclude_Previous_Rating_Model_3_Transductive.ipynb
@@ -14,8 +14,8 @@
    "outputs": [],
    "source": [
     "# Settings\n",
-    "model_name = 'exclude_previous_rating_model_1'\n",
-    "inductive_or_transductive = 'Inductive'"
+    "model_name = 'exclude_previous_rating_model_3'\n",
+    "inductive_or_transductive = 'Transductive'"
    ]
   },
   {
