ggn lte 1 from actual

--- a/Code/Modelling/Graph Neural Network/Create Figures and Tables.ipynb
+++ b/Code/Modelling/Graph Neural Network/Create Figures and Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,12 +358,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Mapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get custom mapping\n",
+    "_, _, _, custom_mapping = get_column_names_and_mapping(most_complex_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Model Comparison Table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -371,17 +388,29 @@
      "output_type": "stream",
      "text": [
       "Majority baselines are the same: True\n",
-      "                                  Model/Baseline Accuracy\n",
-      "0                                     Altman's Z   0.3010\n",
-      "0                 Financial Variables and Sector   0.6045\n",
-      "0  Financial Variables, Sector, and NLP Features   0.6393\n",
-      "0                     Most Common Class Baseline   0.2985\n",
+      "                                  Model/Baseline Accuracy  \\\n",
+      "0                                     Altman's Z   0.3010   \n",
+      "0                 Financial Variables and Sector   0.6045   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.6393   \n",
+      "0                     Most Common Class Baseline   0.2985   \n",
+      "\n",
+      "  Share $\\le$ 1 Rating From Actual  \n",
+      "0                           0.7687  \n",
+      "0                           0.9254  \n",
+      "0                           0.9353  \n",
+      "0                                   \n",
       "Majority baselines are the same: True\n",
-      "                                  Model/Baseline Accuracy\n",
-      "0                                     Altman's Z   0.3134\n",
-      "0                 Financial Variables and Sector   0.6169\n",
-      "0  Financial Variables, Sector, and NLP Features   0.6468\n",
-      "0                     Most Common Class Baseline   0.2985\n"
+      "                                  Model/Baseline Accuracy  \\\n",
+      "0                                     Altman's Z   0.3134   \n",
+      "0                 Financial Variables and Sector   0.6169   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.6468   \n",
+      "0                     Most Common Class Baseline   0.2985   \n",
+      "\n",
+      "  Share $\\le$ 1 Rating From Actual  \n",
+      "0                           0.7687  \n",
+      "0                           0.9204  \n",
+      "0                           0.9378  \n",
+      "0                                   \n"
      ]
     }
    ],
@@ -401,10 +430,16 @@
     "        # Accuracy\n",
     "        accuracy = (predictions['target'] == predictions['pred']).mean()\n",
     "\n",
+    "        # Close/exact share <= 1 from the target\n",
+    "        y_test_num = predictions['target'].map(custom_mapping)\n",
+    "        y_pred_num = predictions['pred'].map(custom_mapping)\n",
+    "        close_exact_share = round(((y_test_num - y_pred_num).abs() <= 1).mean(), 4)\n",
+    "\n",
     "        # Create dataframe row\n",
     "        model_comparison_row = pd.DataFrame({\n",
     "            'Model/Baseline': [clean_model_name],\n",
-    "            'Accuracy': [accuracy]\n",
+    "            'Accuracy': [accuracy],\n",
+    "            'Share $\\\\le$ 1 Rating From Actual': [str(close_exact_share)]\n",
     "        })\n",
     "        model_comparison_rows.append(model_comparison_row)\n",
     "\n",
@@ -420,7 +455,8 @@
     "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
     "        'Model/Baseline': ['Most Common Class Baseline'],\n",
-    "        'Accuracy': [majority_baselines[0]]\n",
+    "        'Accuracy': [majority_baselines[0]],\n",
+    "        'Share $\\\\le$ 1 Rating From Actual': ['']\n",
     "    })])\n",
     "\n",
     "    # Export to Excel\n",
@@ -451,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -552,9 +588,6 @@
     }
    ],
    "source": [
-    "# Get custom mapping\n",
-    "_, _, _, custom_mapping = get_column_names_and_mapping(most_complex_model)\n",
-    "\n",
     "# Iterate over Transductive and Inductive\n",
     "for transductive_inductive in ['Transductive', 'Inductive']:\n",
     "\n",
