--- a/Output/Modelling/Graph Neural Network/Tables/Inductive_model_comparison_df.tex
+++ b/Output/Modelling/Graph Neural Network/Tables/Inductive_model_comparison_df.tex
@@ -1,12 +1,12 @@
 \footnotesize
-\begin{tabular}{cc}
+\begin{tabular}{ccc}
 \toprule
-Model/Baseline & Accuracy \\
+Model/Baseline & Accuracy & Share $\le$ 1 Rating From Actual \\
 \midrule
-Altman's Z & 0.3134 \\
-Financial Variables and Sector & 0.6169 \\
-Financial Variables, Sector, and NLP Features & 0.6468 \\
-Most Common Class Baseline & 0.2985 \\
+Altman's Z & 0.3134 & 0.7687 \\
+Financial Variables and Sector & 0.6169 & 0.9204 \\
+Financial Variables, Sector, and NLP Features & 0.6468 & 0.9378 \\
+Most Common Class Baseline & 0.2985 &  \\
 \bottomrule
 \end{tabular}
 
