--- a/Code/Modelling/Graph Neural Network/Create Figures and Tables.ipynb
+++ b/Code/Modelling/Graph Neural Network/Create Figures and Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,29 +388,17 @@
      "output_type": "stream",
      "text": [
       "Majority baselines are the same: True\n",
-      "                                  Model/Baseline Accuracy  \\\n",
-      "0                                     Altman's Z   0.3010   \n",
-      "0                 Financial Variables and Sector   0.6045   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.6393   \n",
-      "0                     Most Common Class Baseline   0.2985   \n",
-      "\n",
-      "  Share $\\le$ 1 Rating From Actual  \n",
-      "0                           0.7687  \n",
-      "0                           0.9254  \n",
-      "0                           0.9353  \n",
-      "0                                   \n",
+      "                                  Model/Baseline Accuracy\n",
+      "0                                     Altman's Z   0.3010\n",
+      "0                 Financial Variables and Sector   0.6045\n",
+      "0  Financial Variables, Sector, and NLP Features   0.6393\n",
+      "0                     Most Common Class Baseline   0.2985\n",
       "Majority baselines are the same: True\n",
-      "                                  Model/Baseline Accuracy  \\\n",
-      "0                                     Altman's Z   0.3134   \n",
-      "0                 Financial Variables and Sector   0.6169   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.6468   \n",
-      "0                     Most Common Class Baseline   0.2985   \n",
-      "\n",
-      "  Share $\\le$ 1 Rating From Actual  \n",
-      "0                           0.7687  \n",
-      "0                           0.9204  \n",
-      "0                           0.9378  \n",
-      "0                                   \n"
+      "                                  Model/Baseline Accuracy\n",
+      "0                                     Altman's Z   0.3134\n",
+      "0                 Financial Variables and Sector   0.6169\n",
+      "0  Financial Variables, Sector, and NLP Features   0.6468\n",
+      "0                     Most Common Class Baseline   0.2985\n"
      ]
     }
    ],
@@ -438,8 +426,8 @@
     "        # Create dataframe row\n",
     "        model_comparison_row = pd.DataFrame({\n",
     "            'Model/Baseline': [clean_model_name],\n",
-    "            'Accuracy': [accuracy],\n",
-    "            'Share $\\\\le$ 1 Rating From Actual': [str(close_exact_share)]\n",
+    "            'Accuracy': [accuracy]#,\n",
+    "            #'Share $\\\\le$ 1 Rating From Actual': [str(close_exact_share)]\n",
     "        })\n",
     "        model_comparison_rows.append(model_comparison_row)\n",
     "\n",
@@ -455,8 +443,8 @@
     "    # Add row with Model/Baseline = 'Most Common Class Baseline' and Accuracy = majority_baseline[0]\n",
     "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
     "        'Model/Baseline': ['Most Common Class Baseline'],\n",
-    "        'Accuracy': [majority_baselines[0]],\n",
-    "        'Share $\\\\le$ 1 Rating From Actual': ['']\n",
+    "        'Accuracy': [majority_baselines[0]]#,\n",
+    "        #'Share $\\\\le$ 1 Rating From Actual': ['']\n",
     "    })])\n",
     "\n",
     "    # Export to Excel\n",
@@ -471,7 +459,8 @@
     "        model_comparison_df[col] = model_comparison_df[col].apply(lambda x: f'{x:.4f}' if isinstance(x, float) else x)\n",
     "    # Center all columns\n",
     "    lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
-    "    latex_with_font_size = \"\\\\tiny\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    #latex_with_font_size = \"\\\\tiny\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
     "    with open('../../../Output/Modelling/' + classifier_name + '/Tables/' + transductive_inductive + '_model_comparison_df.tex', 'w') as f:\n",
     "        f.write(latex_with_font_size)\n",
     "\n",
@@ -487,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
