--- a/Output/Modelling/Graph Neural Network/Tables/Transductive_model_comparison_df.tex
+++ b/Output/Modelling/Graph Neural Network/Tables/Transductive_model_comparison_df.tex
@@ -1,12 +1,12 @@
-\tiny
-\begin{tabular}{ccc}
+\footnotesize
+\begin{tabular}{cc}
 \toprule
-Model/Baseline & Accuracy & Share $\le$ 1 Rating From Actual \\
+Model/Baseline & Accuracy \\
 \midrule
-Altman's Z & 0.3010 & 0.7687 \\
-Financial Variables and Sector & 0.6045 & 0.9254 \\
-Financial Variables, Sector, and NLP Features & 0.6393 & 0.9353 \\
-Most Common Class Baseline & 0.2985 &  \\
+Altman's Z & 0.3010 \\
+Financial Variables and Sector & 0.6045 \\
+Financial Variables, Sector, and NLP Features & 0.6393 \\
+Most Common Class Baseline & 0.2985 \\
 \bottomrule
 \end{tabular}
 
